--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "vite_react_shadcn_ts",
+  "homepage": "https://Gowtham310106.github.io/Smart-AI-Based-Rockfall-Prediction",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
